prevents toolbar buttons to wrap

--- a/examples/inspector/style/controls.css
+++ b/examples/inspector/style/controls.css
@@ -56,7 +56,7 @@
 }
 
 .toolbarLabel {
-  float: left;
+  display: inline-block;
   width: 78px;
   height: 22px;
   margin-right: 10px;
@@ -74,10 +74,9 @@
 }
 
 .toolbarButton {
-  float: left;
+  display: inline-block;
   width: 78px;
   height: 22px;
-  margin-right: 6px;
   border: 1px solid hsla(210,8%,5%,.45);
   border-radius: 3px;
   background: linear-gradient(hsla(212,7%,57%,.35), hsla(212,7%,57%,.1));
