--- a/examples/inspector/style/style.css
+++ b/examples/inspector/style/style.css
@@ -46,6 +46,8 @@ body.simple #xstats {
   bottom: 0;
   right: 0;
   left: 0;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 #message {
